--- a/package.json
+++ b/package.json
@@ -8,8 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.0",
+    "firebase": "^9.6.8",
+    "framer-motion": "^6.2.8",
+    "material-ui-phone-number": "^3.0.0",
     "next": "12.1.0",
+    "phone": "^3.1.12",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-code-input": "^3.10.1",
+    "react-device-detect": "^2.1.2",
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.3",
+    "react-modal-sheet": "^1.5.0",
+    "react-phone-input-2": "^2.15.0",
+    "use-email-autocomplete": "^1.0.7",
+    "use-ssr": "^1.0.24"
   }
 }
